--- a/chapter1.tex
+++ b/chapter1.tex
@@ -1342,4 +1342,6 @@ Une liste des constantes physiques fondamentales ou autres est disponible dans
 	\item Tables of physical and chemical constants, (initiallement par) G.W.C. Kaye et T.H. Laby. Longman, Londres
 \end{itemize}
 
+\onecolumn
+
 \end{document}
